styles.css
body{
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
}

.header{
    background-color: #1F2937;
    color: white;
    display: flex;
    flex-direction: row;
    align-items: stretch;
    justify-content: space-evenly;
    height: auto;
}
.header-section1{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    margin-top: 8px;
    margin-bottom: 100px;
    flex-wrap: nowrap;
    flex-shrink: 0;
}

.header-logo{
    display: flex;
    margin-bottom: 100px;
    font-size: 24px;
}
.section1-container{
    display: flex;
    flex-direction: column;
}

.header-title{
    font-size: 48px;
    font-weight: extra-bold;
}

.header-body{
    font-size: 18px;
}
.header button{
    background-color: blue;
    color: white;
    border-radius: 4px;
}

.header-section2{
    display: flex;
    flex-direction: column;
    margin-top: 8px;
    margin-bottom: 100px;
}

.header-links ul{
    display: flex;
    justify-content: flex-end;
    margin-bottom: 100px;
    gap: 16px;
}

.header a{
    color: white;
    text-decoration: none;
}

.image{
    flex: 1;
    display: flex;
}

.information{
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 300px;
}
.information ul{
    display: flex;
    gap: 32px;
}
.information-title{
    margin: 20px;
    font-size: 36px;
    font-weight: bold;
    color: #1F2937;
}
    
.box1, .box2, .box3, .box4{
    height: 150px;
    width: 150pxpx;
    border: 2px solid blue;
    border-radius: 25px;
    gap: 16px;
}

.quote{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #E5E7EB;
    height: 300px;
}
.quote-text{
    display: flex;
    font-size: 36px;
    font-style: italic;
    font-weight: light;
    color: #1F2937;
}
.quote-author{
    display: flex;
    font-weight: bold;
}

.signup-banner{
    display: flex;
    height: 300px;
    align-items: center;
    justify-content: center;
    
}

.banner-container{
    display: flex;
    height: 150px;
    width: 800px;
    background-color: #3882F6;
    color: white;
    border: 2px solid 3882F6;
    border-radius: 4px;
}
.bannertext{
    display: flex;
    flex-direction: column;
}
img{
    width: 400px;
    height: auto;
}
ul{
    margin: 0;
    padding: 0;
    list-style-type: none;
    display: flex;
}

